--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
             <header>
                     <div class="logo">
-                        <h1>LOGO</h1>
+                        <h1>Amanda Accieri</h1>
 
                     </div>
 
