--- a/index.html
+++ b/index.html
@@ -30,9 +30,10 @@
             <article class="text">
                 <div class="sub-text">
                     <div class="tx">
-                        <h2>Cuide do seu corpo</h2>
-                        <h4>Cuide da sua mente</h4>
+                        <h2><p>John Jonnes</p></h2>
+                        <h4><p>Fighter|Mister</p></h4>
                     </div>
+                    <button class="btn"><p>Contact</p></button>
                 </div>
             </article>
 
