--- a/index.html
+++ b/index.html
@@ -30,6 +30,12 @@
         </nav>
     </header>
 
+    <main>
+        <div class="container">
+            
+        </div>
+    </main>
+
     
 <script src="./js/bootstrap.bundle.min.js"></script>
 </body>
