--- a/psi/index.html
+++ b/psi/index.html
@@ -18,6 +18,9 @@
             <div><img class="logo" src="./imagens/logo.png" alt="Amanda Psicologa"></div>
             <h4>Amanda Accieri</h4>
         </aside>
+
+       
+
         <nav>
 
             <ul>
@@ -117,7 +120,7 @@
     </main>
 
     <main class="main2">
-      <section>
+      <section class="m2s1">
         <div>
           <h1>
             Bem vindo <span class="off">Amanda Accieri</span>
@@ -126,6 +129,32 @@
 
         </div>
       </section>
+
+      <section class="m2s2">
+
+        
+
+        <div class="img">
+            <picture class="pic">
+                <img src="./imagens/pic1.jpg" alt="Amanda Accieri">
+            </picture>
+        </div>
+
+        <div class="img">
+            <picture class="pic">
+                <img src="./imagens/pic2.jpg" alt="Amanda Accieri">
+            </picture>
+        </div>
+
+        <div class="img">
+            <picture class="pic">
+                <img src="./imagens/pic3.jpg" alt="Amanda Accieri">
+            </picture>
+        </div>
+
+      </section>
+
+
     </main>
 
 <script src="./js/script.js"></script>  
